Removed configuration parameters

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,11 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+tasks.withType(Test) {
+    systemProperties(System.properties())
+    useJUnitPlatform()
+}
+
 test {
     useJUnitPlatform()
 }
